--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@floating-ui/dom": "^1.7.1",
 		"graph-modal": "github:maxdenaro/graph-modal",
 		"imask": "^7.6.1",
+		"just-validate": "^4.3.0",
 		"swiper": "^11.2.8"
 	}
 }
